# basil

./: .gitignore  AI_BASIL_DROPIN2.md  AI_FEATURE_REQUESTS.md  AI_USING_AI_NOTES.md  ASTERISK.md  BASIL_IDE_JUNIE_1.md  BASIL_IDE_JUNIE_2_3_LSP_DAP.md  BASIL_OK_PROMPT.md  BEGIN_END.md  CLASSES_JUNIE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  ELIZA.md  ELONMUSK.md  FUNCTIONS.md  IDE.md  JETBRAINS.md  JUNIE_PROMPT_FOR_COMPILER.md  JUNIE_PROMPT_FOR_CROSSTERM.md  JUNIE_PROMPT_FOR_CROSSTERM_PART2.md  LIBRARY_OBJECTS.md  MIDI_CODERS_GUIDE.md  NUTEMP.md  OBJECTS.md  README.md  README_OLD.md  REPL.md  SETUP_AI.md  TECNICAL.md  TEMP.md  TODO.md  VISION.md  WASM.md  WHATS_NEW.md  _.basil  c.bat  go.bat
.cargo/: config.toml
.github/workflows/: build.yml
basil-objects/: Cargo.toml
basil-objects-aws/: Cargo.toml
basil-objects-aws/src/: context.rs  lib.rs  runtime.rs  s3.rs  ses.rs  sqs.rs
basil-objects-crypto/: Cargo.toml
basil-objects-crypto/src/: lib.rs  pgp.rs
basil-objects-net/: Cargo.toml
basil-objects-net/src/: http.rs  lib.rs  runtime.rs  sftp.rs  smtp.rs
basil-objects-orm/: Cargo.toml
basil-objects-orm/src/: lib.rs
basil-objects-sql/: Cargo.toml
basil-objects-sql/src/: lib.rs  mysql.rs  postgres.rs  runtime.rs
basil-objects/src/: ai.rs  audio.rs  base64.rs  bmx_rider.rs  bmx_team.rs  csv.rs  curl.rs  daw.rs  json.rs  lib.rs  midi.rs  sqlite.rs  term.rs  zip.rs
basilc/: Cargo.toml
basilc/src/: main.rs  repl.rs  repl_ai.rs  runtime.rs  template.rs
basilc/tests/: testmode.rs
basilcore/ast/: Cargo.toml
basilcore/bytecode/: Cargo.toml
basilcore/common/: Cargo.toml
basilcore/compiler/: Cargo.toml
basilcore/compiler/src/: lib.rs  service.rs
basilcore/lexer/: Cargo.toml
basilcore/parser/: Cargo.toml
basilcore/vm/: Cargo.toml
basilcore/vm/src/: debug.rs  lib.rs
basilcore/vm/tests/: debug_api.rs
bcc/: Cargo.toml
bcc/src/: main.rs
crates/backend-rs/: Cargo.toml
crates/basil-embed/: Cargo.toml
crates/basil-embed/src/: lib.rs
crates/basil-frontend/: Cargo.toml
crates/basil-host/: Cargo.toml
crates/basil-host/src/: lib.rs
crates/basil-ir/: Cargo.toml
crates/basilica/: Cargo.toml
crates/basilica/src/: app.rs  config.rs  instance.rs  main.rs
crates/libbasilrt/: Cargo.toml
crates/libbasilrt/src/: lib.rs
dawg/: dawg.bat
docs/: BASIL_KEYWORDS_BY_CATEGORY.md  BASIL_REFERENCE.md  BUILDING.md  daw.md  reference.html
docs/CHAT_GPT/: AI_BASIL_CODE_REQUESTS.md
docs/IDE/: BASIC_IDE_STEP1.md  BASIL_IDE.md  BASIL_IDE_JUNIE_4_VSCODE.md
docs/JUNIE_ULTIMATE/: JUNIE_CONTEXT_IMPORTANT_README.md  JUNIE_PROMPT_FOR_CROSSTERM_PART3.md  MIDI.md
docs/biz/: ELONMUSK.md  MEDIA.md  OUTREACH.md  PRESSKIT.md
docs/compiler/: AOT_COMPILER.md  CHANGELOG_AOT.md  COMPILER.md  COMPILER_DIST.md  COMPILER_HMM.md  COMPILER_NEXT_STEPS.md  CRATES_IO.md  HOWTO.md
docs/data/: basil_lexicon_for_ai.txt
docs/development/: AI_MIDI.md  AI_PHASE_3_WIP.md  APT_INSTALLER.md  ARRAY_NOTATION_BRACKETS.md  AWS.md  AWS_MOD_PROMPT_FOR_JUNIE.md  BASILICA_V0_JUNIE_PREP_PROMPT.md  BASILICA_V0_JUNIE_PROMPT.md  BASIL_CGI.md  BASIL_COMPILER_WEBSITE.md  BASIL_ORM_PROMPT_FOR_JUNIE.md  CHATGPTS_IDEAS_FOR_MODS.md  CRYPTO_THOUGHTS.md  DATA_TYPES_PROMPT_FOR_JUNIE.md  FILE_IO.md  FIXED_LENGTH_STRINGS_JUNIE_PROMPT.md  GEARMAN.md  GOALS.md  HTTP_REST_PROMPT_FOR_JUNIE.md  KEYWORD_RESEARCH_PROMPT_FOR_JUNIE.md  MCP.md  NONTRIVIAL_JUNIE_TIRADE.md  OBJECTS.md  PDB_LINKER_ERROR.md  PGP_ENCRYPT_PROMPT_FOR_JUNIE.md  PORTABLE_LINUX.md  SMTP_SFTP_PROMPT_FOR_JUNIE.md  SQL_CONNECTOR_PROMPT_FOR_JUNIE.md  SUGGESTIONS.md  WASM2.md  WINDOWS_PDB_LINKER_ERROR.md
docs/educational/: BASIL_SHARP.md
docs/guides/: AI_ERROR_429.md  AMAZON_AWS.md  BASILICA.md  BASIL_KEYWORDS_BY_CATEGORY.md  BASIL_LINTER_FORMATTER.md  BASIL_OK_PROMPT.md  BASIL_REFERENCE.md  BMX.md  COMPILER_GUIDE.md  CRYPTO_PGP.md  ENV_VARS.md  EXCEPTIONS.md  FAQ_COMPILED_CLASSES.md  FUNCTIONS.md  NONSCALARS.md  OBJ_AI_MOD.md  ORM.md  ORM_SQL.md  PGP.md  PUNS.md  SEMICOLONS.md  SEMICOLONS_STYLE_GUIDE.md  SETUP_AI.md  STRINGS.md  STUDENTS.md  TECHNICAL.md  index.html  reference.html
docs/reference/: STOP.md
docs/troubleshooting/: ALSA_DEPENDENCY_ERROR.md  PDB_LINKER_ERROR.md
examples/: arrays.basil  arrays.basilx  audio_monitor.basil  audio_play.basil  audio_record.basil  base64.basilx  bigtest.basilx  bigtest3.basil  cgi.basilx  class_file_field.basil  class_file_field.basilx  classes.basilx  comments.basilx  csv_demo.basilx  curl.basilx  eliza.basil  endings.basil  environment.basil  environment.basilx  escape_url_demo.basilx  expr.basil  expr.basilx  fib.basilx  file_io_demo.basil  file_io_demo.basilx  fixed_length_strings.basil  for.basil  for.basilx  hello.basil  hello.basilx  input.basil  input.basilx  json_demo.basilx  lists_basic.basil  logger.basil  midi_capture.basil  objects.basil  objects.basilx  objects_arrays.basil  objects_arrays.basilx  (+21 more)
examples/ai/: AI.md
examples/basilbasic.com/: BASILBASIC.md
examples/midi/: DAW.md
examples/obj-ai/: 01_hello_ai.basil  02_stream_joke.basil  03_explain_file.basil  04_embeddings_search.basil  06_basil_code_generator.basil
examples/website/: add_user_cli.basilx  fixed.basil  fixed.basilx  index.basil  index.basilx  login.basil  login.basilx  logout.basil  logout.basilx  (+4 more)
examples_old/: and_or.basil  arrays.basil  bad.basil  base64.basil  bigfix.basil  bigtest.basil  cgi.basil  class_file_field.basil  classes.basil  comments.basil  csv_demo.basil  curl.basil  dir_glob.basil  eliza.basil  else.basil  environment.basil  expr.basil  file_io_demo.basil  fix.basil  hello.basil  input.basil  json_demo.basil  logger.basil  my_class.basil  objects.basil  objects_arrays.basil  objects_no_use.basil  sqlite_demo.basil  strings.basil  while.basil  whole_file_ops.basil  zip_demo.basil
scripts/: do_replace.ps1  lowercase_basil_keywords.ps1  quick_token_pass.ps1  run_basic_ide_step1_test.ps1
testprogs/: my_class.basil  term_test.basil  term_test_ni.basil
unzipped/: eliza.basil  eliza.basilx  env_shell_output.txt  for.basilx  objects.basilx  objects_arrays.basilx  while.basilx
(+25 files in other folders)
