[workspace]
members = [
    "basilc",
    "bcc",
    "basilcore/common",
    "basilcore/lexer",
    "basilcore/ast",
    "basilcore/parser",
    "basilcore/bytecode",
    "basilcore/compiler",
    "basilcore/vm",
    "basil-objects",
    "basil-objects-aws",
    "crates/basil-frontend",
    "crates/basil-ir",
    "crates/backend-rs",
    "crates/libbasilrt",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "MIT"
# (no `name` here)

[workspace.dependencies]
basil-ast       = { path = "basilcore/ast" }
basil-lexer     = { path = "basilcore/lexer" }
basil-parser    = { path = "basilcore/parser" }
basil-compiler  = { path = "basilcore/compiler" }
basil-vm        = { path = "basilcore/vm" }
basil-objects   = { path = "basil-objects" }
basil-objects-aws = { path = "basil-objects-aws" }
basil-common    = { path = "basilcore/common" }
basil-bytecode  = { path = "basilcore/bytecode" }
