[package]
name = "basil-objects-net"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "basil_objects_net"
path = "src/lib.rs"

[features]
# Fine-grained features
obj-net-sftp = ["dep:ssh2", "dep:once_cell", "dep:tokio"]
obj-net-smtp = ["dep:lettre", "dep:once_cell", "dep:tokio"]
# Umbrellas
obj-net = ["obj-net-sftp", "obj-net-smtp"]
obj-all = ["obj-net"]

[dependencies]
basil-bytecode = { workspace = true }
basil-common   = { workspace = true }

once_cell = { version = "1.19", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
ssh2 = { version = "0.9", optional = true }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls", "rustls-native-certs", "ring"], optional = true }

# For path and file ops inside SFTP impl
serde = { version = "1", features = ["derive"], optional = true }
