[package]
name = "basil-objects-sql"
version = "0.1.0"
authors = ["Blackrush LLC"]
edition = "2021"

[lib]
name = "basil_objects_sql"
path = "src/lib.rs"

[features]
default = []
# Phase 1 features
obj-sql-mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/runtime-tokio", "sqlx/tls-rustls", "dep:tokio", "dep:once_cell", "dep:serde_json"]
obj-sql-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio", "sqlx/tls-rustls", "dep:tokio", "dep:once_cell", "dep:serde_json"]
obj-sql = ["obj-sql-mysql", "obj-sql-postgres"]

[dependencies]
basil-common = { workspace = true }
basil-bytecode = { workspace = true }
once_cell = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
sqlx = { version = "0.7", default-features = false, features = [], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = "0.22"
