[package]
name = "basil-objects"
version = "0.1.0"
authors = ["Blackrush LLC"]
edition = "2021"

[lib]
name = "basil_objects"
path = "src/lib.rs"

[features]
default = []
obj-bmx-rider = []
obj-bmx-team = []
obj-bmx = ["obj-bmx-rider", "obj-bmx-team"]
obj-base64 = ["base64"]
obj-zip = ["zip", "walkdir"]
obj-curl = ["ureq"]
obj-json = ["serde_json"]
obj-csv = ["csv", "serde_json"]
obj-sqlite = ["rusqlite"]
# New audio/MIDI/DAW feature objects
obj-audio = ["hound", "cpal"]
obj-midi  = ["midir"]
obj-daw   = ["obj-audio", "obj-midi"]
obj-all = ["obj-base64", "obj-zip", "obj-curl", "obj-json", "obj-csv", "obj-sqlite", "obj-bmx", "obj-audio", "obj-midi", "obj-daw"]

[dependencies]
basil-common = { workspace = true }
basil-bytecode = { workspace = true }
base64 = { version = "0.22", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
walkdir = { version = "2", optional = true }
ureq = { version = "2.9", optional = true, features = ["json", "tls"] }
serde_json = { version = "1", optional = true }
csv = { version = "1.3", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
hound = { version = "3", optional = true }
cpal = { version = "0.15", optional = true }
midir = { version = "0.10", optional = true }