[package]
name = "basil-objects"
version = "0.1.0"
authors = ["Blackrush LLC"]
edition = "2021"

[lib]
name = "basil_objects"
path = "src/lib.rs"

[features]
default = []
obj-bmx-rider = []
obj-bmx-team = []
obj-bmx = ["obj-bmx-rider", "obj-bmx-team"]
obj-base64 = ["base64"]
obj-zip = ["zip", "walkdir"]
obj-curl = ["ureq"]
obj-json = ["serde_json"]
obj-csv = ["csv", "serde_json"]
obj-sqlite = ["rusqlite"]
# New audio/MIDI/DAW feature objects
obj-audio = ["hound", "cpal"]
obj-midi  = ["midir"]
obj-daw   = ["obj-audio", "obj-midi"]
# New AI feature object (Phase 1 minimal)
obj-ai = ["serde_json", "sha1", "sha2", "dirs", "once_cell"]
# New terminal feature object (Crossterm)
obj-term = ["crossterm"]
# AWS feature objects (Phase 1)
obj-aws-s3  = ["basil-objects-aws/obj-aws-s3"]
obj-aws-ses = ["basil-objects-aws/obj-aws-ses"]
obj-aws-sqs = ["basil-objects-aws/obj-aws-sqs"]
obj-aws     = ["obj-aws-s3", "obj-aws-ses", "obj-aws-sqs"]
obj-all = ["obj-base64", "obj-zip", "obj-curl", "obj-json", "obj-csv", "obj-sqlite", "obj-bmx", "obj-audio", "obj-midi", "obj-daw", "obj-ai", "obj-term", "obj-aws"]

[dependencies]
basil-common = { workspace = true }
basil-bytecode = { workspace = true }
# AWS objects live in separate crate
basil-objects-aws = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
walkdir = { version = "2", optional = true }
ureq = { version = "2.9", optional = true, features = ["json", "tls"] }
serde_json = { version = "1", optional = true }
csv = { version = "1.3", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
hound = { version = "3", optional = true }
cpal = { version = "0.15", optional = true }
midir = { version = "0.10", optional = true }
rtrb = "0.3"
# AI extras
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
dirs = { version = "5", optional = true }
once_cell = { version = "1", optional = true }
# Terminal
crossterm = { version = "0.27", optional = true }