[package]
name = "basilc"
version = "0.0.1"
edition = "2021"


[dependencies]
basil-lexer = { workspace = true }
basil-common = { workspace = true }
# New deps for end-to-end run:
basil-parser = { workspace = true }
basil-compiler= { workspace = true }
basil-vm = { workspace = true }
basil-bytecode = { workspace = true }

[features]
obj-bmx = ["basil-vm/obj-bmx"]
obj-bmx-rider = ["basil-vm/obj-bmx-rider"]
obj-bmx-team = ["basil-vm/obj-bmx-team"]
obj-base64 = ["basil-vm/obj-base64", "basil-compiler/obj-base64"]
obj-zip = ["basil-vm/obj-zip", "basil-compiler/obj-zip"]
obj-curl = ["basil-vm/obj-curl", "basil-compiler/obj-curl"]
obj-json = ["basil-vm/obj-json", "basil-compiler/obj-json"]
obj-csv = ["basil-vm/obj-csv", "basil-compiler/obj-csv"]
obj-all = ["obj-base64", "obj-zip", "obj-curl", "obj-json", "obj-csv", "obj-bmx"]
