[package]
name = "basil-compiler"
version = "0.0.1"
edition = "2021"


[dependencies]
basil-common = { workspace = true }
basil-ast = { workspace = true }
basil-bytecode= { workspace = true }
basil-parser = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
obj-bmx = []
obj-bmx-rider = []
obj-bmx-team = []
obj-base64 = []
obj-zip = []
obj-curl = []
obj-json = []
obj-csv = []
obj-sqlite = []
# Audio/MIDI/DAW features used as cfg gates in compiler (no deps here)
obj-audio = []
obj-midi  = []
obj-daw   = ["obj-audio", "obj-midi"]
# AI feature gate (no deps here)
obj-ai = []
# Terminal feature gate (no deps here)
obj-term = []
# NET feature gates (no deps here)
obj-net-sftp = []
obj-net-smtp = []
obj-net      = ["obj-net-sftp", "obj-net-smtp"]
# CRYPTO feature gates (no deps here)
obj-crypto-pgp = []
obj-crypto     = ["obj-crypto-pgp"]
# ORM feature gates (no deps here)
obj-orm = []
obj-orm-mysql = []
obj-orm-postgres = []
obj-orm-all = ["obj-orm", "obj-orm-mysql", "obj-orm-postgres"]