[package]
name = "basil-vm"
version = "0.0.1"
edition = "2021"


[dependencies]
basil-common = { workspace = true }
basil-bytecode = { workspace = true }
basil-objects = { workspace = true }
basil-parser = { workspace = true }
basil-compiler = { workspace = true }
crossterm = "0.27"
base64 = { version = "0.22", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
walkdir = { version = "2", optional = true }

[features]
obj-bmx = ["basil-objects/obj-bmx"]
obj-bmx-rider = ["basil-objects/obj-bmx-rider"]
obj-bmx-team = ["basil-objects/obj-bmx-team"]
obj-base64 = ["base64", "basil-objects/obj-base64"]
obj-zip = ["zip", "walkdir", "basil-objects/obj-zip"]