[package]
name = "basil-vm"
version = "0.0.1"
edition = "2021"


[dependencies]
basil-common = { workspace = true }
basil-bytecode = { workspace = true }
basil-objects = { workspace = true }
basil-parser = { workspace = true }
basil-compiler = { workspace = true }
crossterm = "0.27"
base64 = { version = "0.22", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
walkdir = { version = "2", optional = true }
serde_json = { version = "1", optional = true }
csv = { version = "1.3", optional = true }

[features]
obj-bmx = ["basil-objects/obj-bmx"]
obj-bmx-rider = ["basil-objects/obj-bmx-rider"]
obj-bmx-team = ["basil-objects/obj-bmx-team"]
obj-base64 = ["base64", "basil-objects/obj-base64"]
obj-zip = ["zip", "walkdir", "basil-objects/obj-zip"]
obj-curl = ["basil-objects/obj-curl"]
obj-json = ["serde_json", "basil-objects/obj-json"]
obj-csv = ["csv", "serde_json", "basil-objects/obj-csv"]
obj-sqlite = ["basil-objects/obj-sqlite"]
# SQL connectors (network): MySQL and Postgres
obj-sql-mysql = ["basil-objects/obj-sql-mysql"]
obj-sql-postgres = ["basil-objects/obj-sql-postgres"]
obj-sql = ["obj-sql-mysql", "obj-sql-postgres"]
# New audio/MIDI/DAW features forwarded to basil-objects and basil-compiler
obj-audio = ["basil-objects/obj-audio", "basil-compiler/obj-audio"]
obj-midi  = ["basil-objects/obj-midi",  "basil-compiler/obj-midi"]
obj-daw   = [
    "basil-objects/obj-daw", "basil-objects/obj-audio", "basil-objects/obj-midi",
    "basil-compiler/obj-daw", "basil-compiler/obj-audio", "basil-compiler/obj-midi"
]
obj-ai = ["basil-objects/obj-ai"]
obj-term = ["basil-objects/obj-term"]
# AWS features forwarded to basil-objects
obj-aws-s3  = ["basil-objects/obj-aws-s3"]
obj-aws-ses = ["basil-objects/obj-aws-ses"]
obj-aws-sqs = ["basil-objects/obj-aws-sqs"]
obj-aws     = ["obj-aws-s3", "obj-aws-ses", "obj-aws-sqs"]
# NET features forwarded to basil-objects
obj-net-sftp = ["basil-objects/obj-net-sftp"]
obj-net-smtp = ["basil-objects/obj-net-smtp"]
obj-net      = ["obj-net-sftp", "obj-net-smtp"]