[package]
name = "basil-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
gag = "1.0"

basil-parser = { workspace = true }
basil-compiler = { workspace = true }
basil-bytecode = { workspace = true }
basil-vm = { workspace = true }
basil-host = { path = "..\\basil-host" }

