[package]
name = "basil-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For optional direct dialogs in non-GUI contexts
rfd = { version = "0.14", default-features = true }

basil-bytecode = { workspace = true }
basil-objects = { workspace = true }
basil-common = { workspace = true }
