[package]
name = "basilica"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
directories = "5.0"
rfd = { version = "0.14", default-features = true }

# GUI
eframe = { version = "0.29", default-features = true, features = ["wgpu"] }
egui = "0.29"
wry = "0.44"
tao = "0.30"

# Windows (for COM initialization in webview thread)
windows = { workspace = true, features = ["Win32_System_Com"] }

# Internal crates
basil-embed = { path = "..\\basil-embed" }
basil-host = { path = "..\\basil-host" }

